[tool.poetry]
package-mode = false
name = "understanding-rag-catalyst-center"
version = "0.1.0"
description = ""
authors = ["flopach"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.3.3"
requests = "^2.32.3"
chromadb = "^0.5.17"
beautifulsoup4 = "^4.12.3"
chainlit = "^1.3.1"
jupyterlab = "^4.3.0"
sentence-transformers = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
