[tool.poetry]
package-mode = false
name = "understanding-rag-catalyst-center"
version = "0.2.0"
description = ""
authors = ["flopach"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.3.3"
requests = "^2.32.3"
chromadb = "^0.5.17"
beautifulsoup4 = "^4.12.3"
chainlit = "^2.1.0"
jupyterlab = "^4.3.0"
sentence-transformers = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
